# AgentPayOS

./: .gitignore  Cargo.toml  abi.sol
cli-rust/: Cargo.toml
cli-rust/src/: main.rs
dummy-backend/: go.mod  main.go
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.css  App.jsx  index.css
gateway/: db.go  go.mod  go.sum  main.go  proxy.go
sdk-ts/: package-lock.json  package.json
sdk-ts/src/: example.ts  index.ts
src/: lib.rs  main.rs
